# QuickMaps

./: CMakeLists.txt  Main.qml  README.md  datamodel.cpp  datamodel.h  main.cpp  workerclass.cpp  workerclass.h
components/: Clock.qml
